# gitops

./: README.md
.github/: GITHUB_SECRETS.md
.github/workflows/: gitops-deploy.yml  pr-check.yml
app/: README.md  docker-compose.yml
app/backend/: .dockerignore  Dockerfile  main.py  pyproject.toml
app/backend/data/: visitors.json
app/frontend/: .dockerignore  Dockerfile  next.config.js  next.config.js.proxy  package.json
app/frontend/app/: layout.tsx  page.tsx
applications/dev/: configmap.yaml  deployment.yaml  ingress.yaml  ingress.yaml.disabled  nginx-configmap.yaml  service.yaml
applications/dev/backend/: deployment.yaml  service.yaml
applications/dev/frontend/: configmap.yaml  deployment.yaml  service.yaml
applications/prod/: configmap.yaml  deployment.yaml  ingress.yaml  nginx-configmap.yaml  service.yaml
applications/prod/backend/: configmap.yaml  deployment.yaml  pvc.yaml  service.yaml
applications/prod/frontend/: deployment.yaml  service.yaml
argocd/: app-dev.yaml  app-of-apps.yaml  app-prod.yaml  argocd-server-nodeport.yaml  install.yaml
argocd/applications/: app-of-apps-dev.yaml  app-of-apps-prod.yaml  dev-backend.yaml  dev-frontend.yaml  kustomization.yaml  prod-backend.yaml  prod-frontend.yaml
argocd/applications-dev/: dev-backend.yaml  dev-frontend.yaml  kustomization.yaml
argocd/applications-prod/: kustomization.yaml  prod-backend.yaml  prod-frontend.yaml
namespaces/: argocd.yaml  dev.yaml  prod.yaml
